<resources>
    <string name="app_name">ESI Real Estate</string>

    <string name="post_item_picture_content_description">A picture of the real estate</string>
    <string name="no_price">Le prix n\'a pas été mentionné</string>
    <string name="home">Accueil</string>
    <string name="favorites">Favories</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_post_details">PostDetails</string>

    <string name="post_item_price">%1$s DA</string>

    <string name="localisation_label">Location : </string>
    <string name="location" > %1$s > %2$s > %3$s</string>

    <string name="category_lable">Category : </string>
    <string name="category"> %1$s > %2$s</string>

    <string name="price_label">Prix : </string>
    <string name="price"> %1$s DA</string>

    <string name="surface_lable">Surface : </string>
    <string name="surface"> %1$s</string>

    <string name="description_label">Description :</string>
    <string name="description"> %1$s</string>

    <string name="contact_label">Contact : </string>
    <string name="phone_number">%1$s</string>
    <string name="message_body">Cette annonce pourait vous intéresser %1$s</string>

    <string name="facebook_app_id">427109554592172</string>
    <string name="fb_login_protocol_scheme">fb427109554592172</string>



    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="call_agent">Appeler l\'agent</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="sale">Achat</string>
    <string name="nav_location">Location</string>
    <string name="holiday">Vacances</string>
    <string name="subscribe">Suivre des wilayas</string>
    <string name="subscribe_this">Suivre</string>
    <string name="unsubscribe_this">Ne plus suivre</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification_description">Etre notifier de l\'ajout d\'une annonce dans les wilya que vous suiver</string>
    <string name="new_post_notification_title">Nouveau post</string>
    <string name="new_post_notification_description">Il ya un nouveau post dans la wilaya de %1$s</string>

    <string name="subscribe_toast">Vous suiver les annonecs %1$s</string>
    <string name="unsubscribe_toast">Vous ne suiver plus les aonnonces de %1$s</string>
    <string name="no_posts">Vous n\'avez sauvgarder aucun post dans la catégorie %1$s</string>
    <string name="view_details">Voir les détails</string>
    <string name="my_bookmarks">Mes signets</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="google_login">Google Login</string>
    <string name="retry">Réessayer</string>
    <string name="btn_retry_txt">Nous avons detecté que vous n\'êtes pas connecté. Veuillez verifier votre connexion et réessayer</string>
    <string name="offline_toast">Vous êtes hors connexion</string>
    <string name="online_toast">OK vous êtes maintenat connecté</string>
    <string name="permission_required">Permission requise</string>
    <string name="allow">Permettre</string>
    <string name="deny">Refuser</string>
    <string name="send_by_sms">Envoyer le lien de l\'annonce par SMS</string>
    <string name="send">Envoyer</string>
    <string name="sms_rational">L\'application a besion de cette permission pour envoyer des SMS</string>
    <string name="not_connected_message">Vous n\'êtes pas connecté. Veuillez vous connecter pui réessayer</string>
    <string name="mail_subject">Un annonce immobilière qui peut vous intresser</string>
    <string name="sending_emails">Envoid des emails en cours</string>
    <string name="disconnected">Déconnecté</string>
    <string name="logout">Se déconnecter</string>
    <string name="profile">Profile</string>

    <string-array name="wilayas_array">
        <item>Adrar</item>
        <item>Ain Defla</item>
        <item>Ain Temouchent</item>
        <item>Ain Temouchent</item>
        <item>Alger</item>
        <item>Annaba</item>
        <item>Batna</item>
        <item>Béchar</item>
        <item>Béjaia</item>
        <item>Biskra</item>
        <item>Blida</item>
        <item>Borj Bou Arréridj</item>
        <item>Boumerdès</item>
        <item>Buira</item>
        <item>Chlef</item>
        <item>Constantine</item>
        <item>Djelfa</item>
        <item>El Bayadh</item>
        <item>El Oued</item>
        <item>El Tarf</item>
        <item>Ghardaia</item>
        <item>Guelma</item>
        <item>illizi</item>
        <item>Jijel</item>
        <item>Khenchela</item>
        <item>Laghouat</item>
        <item>Mascara</item>
        <item>Médéa</item>
        <item>Mila</item>
        <item>Mostaganem</item>
        <item>Msila</item>
        <item>Naâma</item>
        <item>Oran</item>
        <item>Ouargla</item>
        <item>Oum El Bouaghi</item>
        <item>Relizane</item>
        <item>Saida</item>
        <item>Sétif</item>
        <item>Sidi Bel Abbès</item>
        <item>Skikda</item>
        <item>Souk Ahras</item>
        <item>Tamanrasset</item>
        <item>Tébessa</item>
        <item>Tiaret</item>
        <item>Tindouf</item>
        <item>Tipaza</item>
        <item>Tissemsilt</item>
        <item>Tizi Ouzou</item>
        <item>Tlemcen</item>

    </string-array>
</resources>
