<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
                android:title="@string/home"
                android:icon="@drawable/ic_home"/>
        <item android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_favorite"
                android:title="@string/favorites">
            <menu>
                <item android:title="@string/sale"
                    android:id="@+id/nav_sale"/>
                <item android:title="@string/nav_location"
                        android:id="@+id/nav_location"/>
                <item android:title="@string/holiday"
                        android:id="@+id/nav_holiday"/>
            </menu>
        </item>
        <item android:id="@+id/nav_subscribe"
            android:title="@string/subscribe"
            android:icon="@drawable/ic_notifications_black_24dp"/>
    </group>
</menu>