<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="#fff">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                style="@style/PriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label" />

        <TextView
                android:id="@+id/tv_price_post_details"
                style="@style/PriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/post_details_price_color"
                android:textSize="@dimen/post_details_price_size"
                android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localisation_label"
                style="@style/TextLabel" />

        <TextView
                android:id="@+id/tv_location_post_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/post_description_info_spacing"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/default_text_size" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_lable" />

        <TextView
                android:id="@+id/tv_category_post_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/post_description_info_spacing"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/default_text_size" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surface_lable" />

        <TextView
                android:id="@+id/tv_surface_post_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/post_description_info_spacing"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label" />

        <TextView
                android:id="@+id/tv_description_post_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/post_description_info_spacing"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/default_text_size" />
    </LinearLayout>



</LinearLayout>